--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -225,7 +225,7 @@
         <button class="btn start-btn" onclick="selectChapter(8)">12:Chemistry</button>
         <button class="btn start-btn" onclick="selectChapter(9)">12:Mathematics</button>
 		 <div class="bottom-heading">
-	 <h2 style="text-align: center; color: red; font-size: 18px">The teachers who provided MCQs for every subject</h2>
+	 <h2 style="text-align: center; color: red; font-size: 18px">The teachers who provided MCQs of their subject</h2>
      
 		  <p class="prof-list">
 		  Sir: Khalid Hussain Buriro &nbsp;&nbsp; (Zoology)<br><br>
