--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -9,7 +9,7 @@
     <!-- Font Awesome Icons CDN (optional) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
-	        /* Global Styles */
+        /* Global Styles */
         body {
             font-size: 1rem; /* 1rem for scalable font size */
             line-height: 1.2;
@@ -17,6 +17,7 @@
             padding: 0;
             background: linear-gradient(to bottom right, #E0FFFF);
         }
+
         /* Custom Navbar Color and Padding */
         .navbar-custom {
             background-color: #FFF8DC;
@@ -26,14 +27,35 @@
             background-color: #9b1d38;
             border-radius: 0.25rem;
         }
-     
+  
+
+        .btn {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            margin: 5px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .btn:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+
+        .button-container {
+            text-align: center;
+            margin-top: 20px;
+        }
+
         .table-container {
-            margin: 5% auto; /* Use percentage for margin */
+            margin: 5% auto;
             background-color: white;
             border-radius: 8px;
             box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
-            padding: 2rem; /* Padding in rem for scalable layout */
-            width: 80%; /* 80% width of the container */
+            padding: 2rem;
+            width: 80%;
         }
 
         table {
@@ -47,7 +69,7 @@
         }
 
         th, td {
-            padding: 1rem; /* Padding in rem for consistent scaling */
+            padding: 1rem;
         }
 
         th {
@@ -57,19 +79,92 @@
 
         .bottom-heading {
             text-align: center;
-            font-size: 2rem; /* Font size in rem */
+            font-size: 2rem;
             font-weight: bold;
-            margin-top: 5%; /* Use percentage for spacing */
+            margin-top: 5%;
             color: #2c3e50;
         }
-		
+
         /* Footer */
         footer {
             background-color: #1d4ed8;
         }
+
+        /* Responsive Styles */
+        @media (max-width: 768px) {
+            .lecturer {
+                width: 100%;
+                margin-bottom: 10px;
+            }
+        }
+		 /* Footer styles */
+        footer {
+            background-color: #ffffff;
+            color: #333;
+            padding: 2rem 0;
+            box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+            margin-top: auto;
+            text-align: center;
+        }
+
+        footer .container {
+            width: 90%;
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        footer h2 {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 1rem;
+        }
+
+        footer ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        footer ul li {
+            margin-bottom: 0.75rem;
+        }
+
+        footer a {
+            text-decoration: none;
+            color: #666;
+            font-size: 1rem;
+            transition: color 0.3s ease;
+        }
+
+        footer a:hover {
+            color: #007BFF;
+        }
+
+        .social-icons a {
+            margin-right: 1rem;
+            font-size: 1.25rem;
+            color: #666;
+            transition: color 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            color: #007BFF;
+        }
+
+        .footer-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 2rem;
+        }
+
+        .footer-grid > div {
+            display: flex;
+            flex-direction: column;
+        }
+
     </style>
 </head>
-<body class="bg-gradient-to-br from-teal-300 via-indigo-200 to-blue-300">
+<body>
 
     <!-- Bootstrap Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom p-2">
@@ -86,7 +181,6 @@
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
-                    
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
                     </li>
@@ -97,9 +191,72 @@
             </div>
         </div>
     </nav>
+<br>
+<p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+Remember that education is not just about grades, but about growth. Embrace challenges, ask questions, and learn from your mistakes. Set goals, stay focused, and believe in your potential. Success comes from hard work, resilience, and the courage to keep going even when things get tough. Keep striving for excellence, and never forget that you have the power to shape your own future.
+</p>
+  <p style="display: flex; align-items: center; padding-left: 20px;">
+  <img src="C:\Users\hp\Desktop\college\gallery/SB5.jpg" alt="" style="padding-right: 20px;padding-left: 20px; width: 50vw; height: auto;">
+  Principal.Khalid Hussain Buriro<br>Zoology<br>
+</p>
+<p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
+Together, we can ensure the success of our students by fostering an environment where excellence in education thrives. Your dedication and hard work are crucial in shaping the future of our students, and I am committed to supporting you every step of the way. Let’s continue working together to innovate, collaborate, and create a positive impact on their learning and growth.
+</p>
+
+
+
+    <h2 style="text-align: center;">Officials Lecturer</h2>
+
+    <section>
+        <div class="lecturer-container" id="lectures-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; overflow: hidden;">
+            <!-- Lecturer 1 -->
+            <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+            </div>
+			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+            </div>
+			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+            </div>
+			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+            </div>
+			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+            </div>
+			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+            </div>
+        </div>
+    </section>
 
     <!-- Table Container -->
-    <div class="table-container">
+   <div class="table-container">
         <h2 style="text-align: center;">NAME OF PRINCIPALS FROM TO</h2>
         <table>
             <thead>
@@ -136,15 +293,44 @@
             </tbody>
         </table>
     </div>
-
-    <!-- Bottom Heading -->
-    <div class="bottom-heading">
-        <h2>Thank You for Visiting!</h2>
-    </div>
- <footer class="bg-blue-600 text-white text-center py-4">
+<footer>
+        <div class="container">
+            <div class="footer-grid">
+                <div>
+                    <h2>About</h2>
+                    <ul>
+                        <li><a href="CONTACT-US.html" target="_self">Contact</a></li>
+                        <li><a href="Government-Girls-College-Daulatpur.html" target="_self">GGC, Daulatpur</a></li>
+                        <li><a href="COLLEGE.html" target="_self">College</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h2>Universities Links</h2>
+                    <ul>
+                        <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
+                        <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
         <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
-    <!-- Bootstrap JS and Popper.js (required for the navbar toggle to work on mobile) -->
+
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script>
+        let currentIndex = 0;
+        const slidesContainer = document.querySelector('.lecturer-container');
+        const totalSlides = slidesContainer.children.length;
+
+        function nextSlide() {
+            currentIndex = (currentIndex + 1) % totalSlides;
+            slidesContainer.style.transform = `translateX(-${currentIndex * 300}px)`; // Adjust the width of the cards (300px)
+        }
+
+        setInterval(nextSlide, 3000); // Automatically change slide every 3 seconds
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 </body>
