--- a/index.html
+++ b/index.html
@@ -195,6 +195,9 @@
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">Gallery</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
                     </li>
                     <li class="nav-item">
