--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">Gallery</a>
+                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
