--- a/ONLINE-TEST.html
+++ b/ONLINE-TEST.html
@@ -199,6 +199,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ONLINE-TEST.html">ONLINE TEST</a>
                     </li>
+			  <li class="nav-item">
+                        <a class="nav-link text-black" href="Government-Girls-College-Daulatpur.html">GALLERY</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link text-black" href="ABOUT-US.html">ABOUT US</a>
                     </li>
