--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -222,21 +222,21 @@ Together, we can ensure the success of our students by fostering an environment 
             </div>
 			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. /div>
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Gmail</div>
             </div>
 			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.../div>
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof...</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer:</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.Zahid Hussain Siyal/div>
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.Zahid Hussain Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 0</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">@gmail.com</div>
