--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -213,14 +213,14 @@ Together, we can ensure the success of our students by fostering an environment 
     <section>
         <div class="lecturer-container" id="lectures-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; overflow: hidden;">
             <!-- Lecturer 1 -->
-            <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
+            <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/sir aijaz.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
             </div>
-			 <div class="lecturer" style="background-color: #fff; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 280px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 80px; height: 80px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
