--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -198,8 +198,8 @@
 <p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
 Remember that education is not just about grades, but about growth. Embrace challenges, ask questions, and learn from your mistakes. Set goals, stay focused, and believe in your potential. Success comes from hard work, resilience, and the courage to keep going even when things get tough. Keep striving for excellence, and never forget that you have the power to shape your own future.
 </p>
-  <p style="display: flex; align-items: center; color: red; padding-left: 40px;">
-  <img src="./gallery/33.jpg" alt="" style="padding-right: 20px; padding-left: 20px; width: 30vw; height: auto;">
+  <p style="display: flex; align-items: center; color: red; font-size: 1.3rem; padding-left: 40px;">
+  <img src="./gallery/33.jpg" alt="" style="padding-right: 40px; padding-left: 40px; width: 30vw; height: auto;">
   Principal.Khalid Hussain Buriro<br>Zoology<br>
 </p>
 <p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
