--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -99,7 +99,7 @@
         }
 		 /* Footer styles */
         footer {
-            background-color: #ffffff;
+            background-color: #95908f;
             color: #333;
             padding: 2rem 0;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
@@ -200,7 +200,7 @@ Remember that education is not just about grades, but about growth. Embrace chal
 </p>
   <p style="display: flex; align-items: center; color: red; font-size: 1.3rem; padding-left: 40px;">
   <img src="./gallery/33.jpg" alt="" style="padding-right: 40px; padding-left: 40px; width: 30vw; height: auto;">
-  Principal.Khalid Hussain Buriro<br>Zoology<br>
+  Principal.Khalid Hussain Buriro<br>Zoology<br>No.03013218163
 </p>
 <p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
 Together, we can ensure the success of our students by fostering an environment where excellence in education thrives. Your dedication and hard work are crucial in shaping the future of our students, and I am committed to supporting you every step of the way. Let’s continue working together to innovate, collaborate, and create a positive impact on their learning and growth.
@@ -216,44 +216,44 @@ Together, we can ensure the success of our students by fostering an environment 
             <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sir aijaz.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Aijaz Ahmed Lakho</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. </div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Gmail</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Gmail</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof...</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer:</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer:</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sir zahid.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.Zahid Hussain Siyal</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: </div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 0</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Chemistry</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03063050188</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Athar Siyal</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03113239520</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Sindhi</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Mis Haleema Sadia Jamali</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">Lecturer: Pakistan Study</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">No: 03</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #666; margin-bottom: 8px;">@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Pakistan Study</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
             </div>
         </div>
     </section>
