--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -99,7 +99,7 @@
         }
 		 /* Footer styles */
         footer {
-            background-color: #95908f;
+            background-color: #dad4d3;
             color: #333;
             padding: 2rem 0;
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
