--- a/Government-Girls-College-Daulatpur.html
+++ b/Government-Girls-College-Daulatpur.html
@@ -215,6 +215,15 @@
              <div class="image-item" onclick="openModal(6)">
                 <img src="./gallery/SB7.jpg" alt="Image 3">
             </div>
+             <div class="image-item" onclick="openModal(7)">
+                <img src="./gallery/SB8.jpg" alt="Image 3">
+            </div>
+             <div class="image-item" onclick="openModal(8)">
+                <img src="./gallery/SB9.jpg" alt="Image 3">
+            </div>
+             <div class="image-item" onclick="openModal(9)">
+                <img src="./gallery/SB10.jpg" alt="Image 3">
+            </div>
         </div>
     </div>
 
@@ -280,17 +289,20 @@
             { src: "./gallery/SB5.jpg", caption: "Caption for Image 5" },
             { src: "./gallery/SB6.jpg", caption: "Caption for Image 6" },
             { src: "./gallery/SB7.jpg", caption: "Caption for Image 7" },
-            { src: "./gallery/aa.jpg", caption: "Caption for Image 8" },
-            { src: "./gallery/bb.jpg", caption: "Caption for Image 9" },
-            { src: "./gallery/cc.jpg", caption: "Caption for Image 10" },
-            { src: "./gallery/dd.jpg", caption: "Caption for Image 11" },
-            { src: "./gallery/ee.jpg", caption: "Caption for Image 12" },
-            { src: "./gallery/ff.jpg", caption: "Caption for Image 13" },
-            { src: "./gallery/gg.jpg", caption: "Caption for Image 14" },
-            { src: "./gallery/hh.jpg", caption: "Caption for Image 15" },
-            { src: "./gallery/ii.jpg", caption: "Caption for Image 16" },
-            { src: "./gallery/jj.jpg", caption: "Caption for Image 15" },
-            { src: "./gallery/kk.jpg", caption: "Caption for Image 16" }
+            { src: "./gallery/SB8.jpg", caption: "Caption for Image 8" },
+            { src: "./gallery/SB9.jpg", caption: "Caption for Image 9" },
+            { src: "./gallery/SB10.jpg", caption: "Caption for Image 10" },
+            { src: "./gallery/aa.jpg", caption: "Caption for Image 11" },
+            { src: "./gallery/bb.jpg", caption: "Caption for Image 12" },
+            { src: "./gallery/cc.jpg", caption: "Caption for Image 13" },
+            { src: "./gallery/dd.jpg", caption: "Caption for Image 14" },
+            { src: "./gallery/ee.jpg", caption: "Caption for Image 15" },
+            { src: "./gallery/ff.jpg", caption: "Caption for Image 16" },
+            { src: "./gallery/gg.jpg", caption: "Caption for Image 17" },
+            { src: "./gallery/hh.jpg", caption: "Caption for Image 18" },
+            { src: "./gallery/ii.jpg", caption: "Caption for Image 19" },
+            { src: "./gallery/jj.jpg", caption: "Caption for Image 20" },
+            { src: "./gallery/kk.jpg", caption: "Caption for Image 21" }
         ];
 
         function openModal(index) {
