--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -208,7 +208,7 @@ Together, we can ensure the success of our students by fostering an environment 
 
 
 
-    <h2 style="text-align: center;">Officials Lecturer</h2>
+    <h2 style="text-align: center;">Teaching Faculity </h2>
 
     <section>
         <div class="lecturer-container" id="lectures-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; overflow: hidden;">
