--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -239,14 +239,14 @@ Together, we can ensure the success of our students by fostering an environment 
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.Zahid Hussain Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Chemistry</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03063050188</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">zahidhussainsiyal2015@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
-                <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <img src="gallery/sir athar.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Athar Siyal</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03113239520</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Physics</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03333307237</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">siyal2222@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
