--- a/index.html
+++ b/index.html
@@ -253,6 +253,8 @@
                     <ul>
                         <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
                         <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
+                        <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
+                        <li><a href="https://www.muet.edu.pk/" target="_self"> MEHRAN University</a></li>
                     </ul>
                 </div>
             </div>
