--- a/index.html
+++ b/index.html
@@ -252,9 +252,20 @@
                     <h2>Universities Links</h2>
                     <ul>
                         <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
-                        <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
                         <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
+                        <li><a href="https://quest.edu.pk/" target="_self"> QUAID-E-AWAM UNIVERSITY</a></li>
+                        <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
                         <li><a href="https://www.muet.edu.pk/" target="_self"> MEHRAN University</a></li>
+                        <li><a href="https://www.lumhs.edu.pk/home/" target="_self">LUMS Jamshoro</a></li>
+                        <li><a href="https://isra.edu.pk/" target="_self"> ISRA University</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><a href="https://www.aiou.edu.pk/" target="_self">Allama Iqbal Open Uni</a></li>
+                        <li><a href="https://www.uok.edu.pk/" target="_self">UNIVERSITY OF KARACHI</a></li>
+                        <li><a href="https://www.szabmu.edu.pk/" target="_self">SZABMU</a></li>
+                        <li><a href="https://www.vu.edu.pk/" target="_self">Virtual University of Pakistan</a></li>
                     </ul>
                 </div>
             </div>
