--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 
             footer p {
                 font-size: 1rem;
+                color: red;
             }
         }
 
@@ -271,7 +272,7 @@
                 </div>
             </div>
         </div>
-        <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+        <p style>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS and Popper.js -->
