--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                 </div>
             </div>
         </div>
-        <p style>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+        <p style="color: red; >&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap JS and Popper.js -->
