--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -296,7 +296,8 @@ Together, we can ensure the success of our students by fostering an environment 
             </tbody>
         </table>
     </div>
-<footer>
+
+    <footer>
         <div class="container">
             <div class="footer-grid">
                 <div>
@@ -311,12 +312,26 @@ Together, we can ensure the success of our students by fostering an environment 
                     <h2>Universities Links</h2>
                     <ul>
                         <li><a href="https://www.sbbusba.edu.pk/" target="_self">Shaheed Benazir Bhutto University</a></li>
+                        <li><a href="https://pumhs.edu.pk/" target="_self"> PUMHS University</a></li>
+                        <li><a href="https://quest.edu.pk/" target="_self"> QUAID-E-AWAM UNIVERSITY</a></li>
                         <li><a href="https://www.usindh.edu.pk/" target="_self">University of Sindh JAMSHORO</a></li>
+                        <li><a href="https://www.muet.edu.pk/" target="_self"> MEHRAN University</a></li>
+                        
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                         <li><a href="https://www.lumhs.edu.pk/home/" target="_self">LUMS Jamshoro</a></li>
+                        <li><a href="https://isra.edu.pk/" target="_self"> ISRA University</a></li>
+                        <li><a href="https://www.aiou.edu.pk/" target="_self">Allama Iqbal Open University</a></li>
+                        <li><a href="https://www.uok.edu.pk/" target="_self">UNIVERSITY OF KARACHI</a></li>
+                        <li><a href="https://www.szabmu.edu.pk/" target="_self">SZABMU</a></li>
+                        <li><a href="https://www.vu.edu.pk/" target="_self">Virtual University of Pakistan</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-        <p>&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
+        <p style ="color: red;">&copy; 2025 Government Girls College Daulatpur All rights reserved.</p>
     </footer>
 
 
