--- a/index.html
+++ b/index.html
@@ -156,14 +156,6 @@
                 animation: walk 3s linear infinite; /* Faster animation */
             }
 
-            .footer-grid {
-                grid-template-columns: 1fr;
-            }
-
-            footer p {
-                font-size: 1rem;
-                color: red;
-            }
         }
 
         @media (max-width: 480px) {
@@ -264,7 +256,7 @@
                     <ul>
                          <li><a href="https://www.lumhs.edu.pk/home/" target="_self">LUMS Jamshoro</a></li>
                         <li><a href="https://isra.edu.pk/" target="_self"> ISRA University</a></li>
-                        <li><a href="https://www.aiou.edu.pk/" target="_self">Allama Iqbal Open Uni</a></li>
+                        <li><a href="https://www.aiou.edu.pk/" target="_self">Allama Iqbal Open University</a></li>
                         <li><a href="https://www.uok.edu.pk/" target="_self">UNIVERSITY OF KARACHI</a></li>
                         <li><a href="https://www.szabmu.edu.pk/" target="_self">SZABMU</a></li>
                         <li><a href="https://www.vu.edu.pk/" target="_self">Virtual University of Pakistan</a></li>
