--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -230,14 +230,14 @@
 		
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr Aijaz Ali Jatoi ..</div>
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr Aijaz Ali Jatoi </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Botony</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sir athar.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Athar Siyal</div>
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Athar Ali Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Physics</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03333307237</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">siyal2222@gmail.com</div>
@@ -251,7 +251,7 @@
             </div>
 		 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sadia.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
-                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Mis Haleema Sadia Jamali</div>
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mis Haleema Sadia Jamali</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Pakistan Study</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03091307838</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">sadiajamali658@gmail.com</div>
