--- a/ABOUT-US.html
+++ b/ABOUT-US.html
@@ -194,17 +194,7 @@
             </div>
         </div>
     </nav>
-<br>
-<p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
 
-</p>
-  <p style="display: flex; align-items: center; color: red; font-size: 1.3rem; padding-left: 40px;">
-  <img src="./gallery/33.jpg" alt="" style="padding-right: 40px; padding-left: 40px; width: 30vw; height: auto;">
-  Principal.Khalid Hussain Buriro<br>Zoology<br>No.03013218163
-</p>
-<p style="text-align: center; color: black;padding-left: 2em; padding-right: 2em; font-size: 1.3rem; font-family: Arial, sans-serif;">
-
-</p>
 
 
 
@@ -214,17 +204,24 @@
         <div class="lecturer-container" id="lectures-container" style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; padding: 20px; overflow: hidden;">
             <!-- Lecturer 1 -->
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
+                <img src="gallery/33.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
+                <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Principal.Khalid Hussain Buriro </div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Phd. Zoology</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No.03013218163</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Gmail</div>
+            </div>
+			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr. Aziz ullah phull </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Assistant Prof: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Gmail</div>
             </div>
             <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sir aijaz.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr. Aijaz Ahmed Lakho</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Sindhi</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03113239520</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03113239520</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">ahmedaijaz684@gmail.com</div>
             </div>
 		
@@ -232,28 +229,28 @@
                 <img src="gallery/SB1.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mr Aijaz Ali Jatoi </div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Botony</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">@gmail.com</div>
             </div>
 			 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sir athar.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof. Athar Ali Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Physics</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03333307237</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03333307237</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">siyal2222@gmail.com</div>
             </div>
 		 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sir zahid.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Prof.Zahid Hussain Siyal</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Chemistry</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03063050188</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03063050188</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">zahidhussainsiyal2015@gmail.com</div>
             </div>
 		 <div class="lecturer" style="background-color: #FFF8DC; border: 1px solid #ddd; border-radius: 8px; width: 300px; padding: 20px; text-align: center; box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);">
                 <img src="gallery/sadia.jpg" alt="Prof. Aijaz Ahmed Lakho" style="width: 150px; height: 150px; border-radius: 50%; margin-bottom: 15px;">
                 <div class="lecturer-name" style="font-size: 18px; font-weight: bold; margin-bottom: 10px; color: #333;">Mis Haleema Sadia Jamali</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Lecturer: Pakistan Study</div>
-                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">No: 03091307838</div>
+                <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">Cell No: 03091307838</div>
                 <div class="lecturer-info" style="font-size: 14px; color: #333; margin-bottom: 8px;">sadiajamali658@gmail.com</div>
             </div>
         </div>
