--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@
         <div class="left-side">
             <h2>Image Slideshow</h2>
             <div class="gallery">
-                <img src="\gallery/aa1.jpg" alt="Image 1">
-                <img src="\gallery/aa1.jpg" alt="Image 2">
-                <img src="\gallery/aa1.jpg" alt="Image 3">
-                <img src="\gallery/aa1.jpg" alt="Image 4">
+                <img src="./gallery/aa1.jpg" alt="Image 1">
+                <img src="./gallery/aa1.jpg" alt="Image 2">
+                <img src="./gallery/aa1.jpg" alt="Image 3">
+                <img src="./gallery/aa1.jpg" alt="Image 4">
             </div>
             <button class="nav-btn prev-btn" onclick="moveSlide(-1)">&#10094;</button>
             <button class="nav-btn next-btn" onclick="moveSlide(1)">&#10095;</button>
