--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <h2>New</h2>
             <div class="scroll-paragraph">
                 <p>The midterm exams are starting from March 21
-                   <br>Tell your children to come to college
+                   <br>Dear students, come to college daily
                    <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
                 </p>
             </div>
@@ -313,10 +313,9 @@
     
     <div class="container mt-5 d-flex flex-wrap justify-content-between">
         <!-- Left-side image -->
-        <div class="col-12 col-md-6">
-            <img src="./gallery/33.jpg" alt="Image" class="img-fluid second-image">
-            <p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif;">PRINCIPAL.KHALID HUSSAIN BURIRO</p><br>
-        </div>
+     <div class="col-12 col-md-6"><img src="./gallery/33.jpg" alt="Image" class="img-fluid">
+         <p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif;">PRINCIPAL.KHALID HUSSAIN BURIRO</p><br></div>
+
 
         <!-- Right-side text -->
         <div class="col-12 col-md-6 text-center">
