--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
             background-color: #9b1d38;
             border-radius: 0.25rem;
         }
-.container {
+         .custom-image {
+        max-width: 60%; /* Change this percentage to adjust size */
+        height: auto;
+    }
+    .container {
             display: flex;
             justify-content: space-between;
             padding: 20px;
@@ -292,7 +296,7 @@
         <div class="right-side">
             <h2>New</h2>
             <div class="scroll-paragraph">
-                <p>The midterm exams are starting from March 21
+                <p>The practical exams are starting from March 21
                    <br>Dear students, come to college daily
                    <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
                 </p>
@@ -300,7 +304,7 @@
 
             <!-- Second paragraph that starts after the first one finishes -->
             <div class="scroll-paragraph-2">
-                <p>The midterm exams are starting from March 21
+                <p>The practical exams are starting from March 21
                    <br>Dear students, come to college daily
                    <button style="font-size: 1em; padding: 0.5em 1em; border: none; border-radius: 0.25em; color: white; cursor: pointer; position: relative; overflow: hidden; background: linear-gradient(45deg, #ff007f, #ff9b00, #7f00ff, #00d4ff); background-size: 400% 400%; animation: shine 3s ease infinite, glow 1.5s ease-in-out infinite;" onclick="window.location.href='Notice.html';">VIEW MORE..</button>
                 </p>
