--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     
     <div class="container mt-5 d-flex flex-wrap justify-content-between">
     <div class="col-12 col-md-6">
-    <img src="./gallery/33.jpg" alt="Image" class="img-fluid" style="width: 18rem; height: auto;">
+    <img src="./gallery/33.jpg" alt="Image" class="img-fluid" style=" padding-left: 1em; width: 18rem; height: auto;">
     <p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif;">
         PRINCIPAL.KHALID HUSSAIN BURIRO
     </p><br>
