--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
 
     <p style="text-align: center; color: black; font-size: 1.3rem; font-family: Arial, sans-serif; padding-left: 1em; padding-right: 2em;">Note: Students must follow college rules and wear the official uniform neatly and respectfully, reflecting the values of our institution!</p>
     
- <div class="col-12 col-md-6" style="padding-left: 20px;">
-    <img src="./gallery/33.jpg" alt="Image" class="img-fluid" style="width: 40%; height: auto;">
-    <p style="text-align: center; color: red; font-size: 0.8rem; font-family: Arial, sans-serif;">
+<div class="col-12 col-md-6">
+    <img src="./gallery/33.jpg" alt="Image" class="img-fluid" style="width: 20rem; height: auto;">
+    <p style="text-align: center; color: red; font-size: 1.0rem; font-family: Arial, sans-serif;">
         PRINCIPAL.KHALID HUSSAIN BURIRO
     </p><br>
 </div>
